fix spacing and social icons

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@
     --zf-youtube: #e62222;
 }
 
+.spacing{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
 .debug {
     * {
         border: 1px dashed black;
@@ -31,12 +36,13 @@
 
 .btn-white{
     background-color: var(--zf-lighter);
-    padding: 0.2rem 0.2rem;
+    padding: 0.4rem 0.5rem;
     text-align: center;
-    box-shadow: 0 0 2px black;
+    box-shadow: 0px 3px 5px 0px #00000042;
     border-radius: 1rem;
     line-height: 50%;
     transition-duration: 0.5s;
+    font-size: 0.6rem;
     a{
         text-decoration: none;
     }
@@ -166,6 +172,7 @@ hr{
     background-color: var(--zf-main);
 
     & span:nth-child(1) {
+        padding-top: 2rem;
         font-size: 0.5rem;
         color: var(--zf-light-text);
     }
@@ -233,7 +240,6 @@ hr{
 .tiramisu-img{
     width: 60%;
     margin: auto;
-    margin-bottom: 1rem;
     img{
         box-shadow: 0 0 2px black;
     }
@@ -241,7 +247,6 @@ hr{
 
 /* footer  */
 #site-footer{
-    margin-top: 2rem;
     padding: 1rem 0;
     background-color: var(--zf-footer);
     color: var(--zf-lighter);
